<resources>
    <string name="app_name">Login Sample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>

    <string name="activity_two">Activity Two</string>
    <string name="external_url">External Url</string>
    <string name="send_message">Send Message</string>

    <string name="title_activity_user">User</string>
    <string name="login_text">Login Page</string>
    <string name="username_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="attempts_text">Attempts:</string>
    <string name="button_login">Login</string>
    <string name="welcome_text">Welcome for login</string>
    <string name="button_url">URL</string>
    <string name="button_send_text">Send Text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="click_me">Click Me</string>

    <string name="flower">Tibouchina Semidecandra</string>
    <string name="instructions">Beautiful large royal purple flowers adorn attractive satiny green leaves that turn orange/red in cold weather. Grows to up to 18 feet, or prune annually to shorten.</string>
    <string name="title_activity_flower">FlowerActivity</string>

</resources>
