<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Login">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activity_two"
        android:title="@string/activity_two"
        android:orderInCategory="101"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_external_url"
        android:title="@string/external_url"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send_message"
        android:title="@string/send_message"
        android:orderInCategory="103"
        app:showAsAction="ifRoom" />

</menu>
